--- a/bokeh-bokeh/docker-compose.yml
+++ b/bokeh-bokeh/docker-compose.yml
@@ -1,11 +1,11 @@
 
-
 services:
-  dash-app:
+  bokeh-app:
     build: .
-    container_name: dash_csv_app
+    container_name: bokeh-app
     ports:
-      - "8050:8050"
+      - "5006:5006"
     volumes:
       - ./data:/app/data
     restart: unless-stopped
+
